# goit-python-web-hw-13

Django/hw_project/: .env.example  README.txt  db.sqlite3  pyproject.toml
Django/hw_project/app_auth/: forms.py  urls.py  views.py
Django/hw_project/app_auth/templates/app_auth/: login.html  logout.html  password_reset_email.html  signup.html
Django/hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
Django/hw_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
Django/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_remove_quote_done.py  0004_author_remove_tag_tag_of_username_and_more.py
Django/hw_project/quotes/static/quotes/: style.css
Django/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag.html
Django/hw_project/quotes/templatetags/: extract.py
Django/hw_project/utils/: add_quotes_to_db.py  authors.json  migration.py
REST API/: .env.example  README.txt  main.py  pyproject.toml
REST API/src/conf/: config.py
REST API/src/database/: db.py
REST API/src/entity/: models.py
REST API/src/routes/: auth.py  contacts.py  users.py
REST API/src/schemas/: schemas.py
REST API/src/services/: auth.py  cloudinary_service.py  email.py
